// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pane elevation levels 1`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 0 0 rgba(0,0,0,0.12);
  max-width: 100%;
}

<div
  className="c0"
  elevation={0}
/>
`;

exports[`Pane elevation levels 2`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 0 1px rgba(0,0,0,0.12),0 2px 4px -2px rgba(0,0,0,0.2);
  max-width: 100%;
}

<div
  className="c0"
  elevation={1}
/>
`;

exports[`Pane elevation levels 3`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 0 1px rgba(0,0,0,0.12),0 5px 8px -4px rgba(0,0,0,0.2);
  max-width: 100%;
}

<div
  className="c0"
  elevation={2}
/>
`;

exports[`Pane elevation levels 4`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 0 1px rgba(0,0,0,0.12),0 8px 10px -4px rgba(0,0,0,0.2);
  max-width: 100%;
}

<div
  className="c0"
  elevation={3}
/>
`;

exports[`Pane elevation levels 5`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 0 1px rgba(0,0,0,0.12),0 16px 24px -8px rgba(0,0,0,0.2);
  max-width: 100%;
}

<div
  className="c0"
  elevation={4}
/>
`;

exports[`Pane renders 1`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 0 0 rgba(0,0,0,0.12);
  max-width: 100%;
}

<div
  className="c0"
  elevation={0}
/>
`;
